--- a/server/vercel.json
+++ b/server/vercel.json
@@ -2,26 +2,17 @@
   "version": 2,
   "builds": [
     {
-      "src": "src/index.ts",
+      "src": "dist/index.js",
       "use": "@vercel/node",
       "config": {
-        "includeFiles": ["dist/**", "src/**/*.ts"],
-        "maxLambdaSize": "50mb"
+        "includeFiles": ["dist/**"]
       }
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/index.ts",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
+      "dest": "dist/index.js"
     }
-  ],
-  "regions": ["iad1"],
-  "functions": {
-    "api/**": {
-      "memory": 3008,
-      "maxDuration": 30
-    }
-  }
+  ]
 }
