--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-tabs": "^1.1.9",
     "@tanstack/react-query": "^5.75.1",
     "@tanstack/react-query-devtools": "^5.75.1",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
